--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://metatags.io/">
     <meta property="og:title" content="Sushi Page">
     <meta property="og:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
-    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+    <meta property="og:image" content="https://github.com/bedimcode/responsive-sushi-website/blob/main/preview.png?raw=true">
     <link rel="icon" href="./sushi/img/about-sushi-title.png">
     <link rel="stylesheet" href="./css/output.css" />
     <script
@@ -52,13 +52,13 @@
               <a class="nav-link active" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#about us">About Us</a>
+              <a class="nav-link" href="#aboutUs" id="aboutUsBtn">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#popular">Popular</a>
+              <a class="nav-link" href="#popular" id="popularBtn">Popular</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#Recently">Recently</a>
+              <a class="nav-link" href="#Recently" id="RecentlyBtn">Recently</a>
             </li>
           </ul>
           <a class="text-dark" href="#"><i class="fa-regular fa-moon"></i></a>
@@ -87,16 +87,16 @@
         </div>
       </section>  
 
-      <section id="about us">
-        <div class=" container py-5 pb-md-7">  
+      <section id="aboutUs">
+        <div class=" container py-lg-6 pb-md-7">  
           <div class=" row justify-content-center align-items-center flex-column-reverse flex-md-row">
             <div class=" col-10 col-md-5 col-lg-4">
-              <div>
+              <div id="aboutImage">
                 <img src="./sushi/img/about-sushi.png" class=" w-100 d-block" alt="">
               </div>
             </div>
             <div class=" col-10 col-md-5 col-lg-4 offset-1">
-              <div class=" text-center text-md-start">
+              <div class=" text-center text-md-start" id="aboutText">
                 <h2 class=" mb-4 text-warning sub-title">About US</h2>
                 <h1 class=" display-6 mb-0 title">We Provide <img src="./sushi/img/about-sushi-title.png" class="sushi-title-2" alt=""></h1>
                 <h1 class=" display-5 d-block d-md-inline title">Healthy food</h1>
@@ -108,34 +108,36 @@
       </section>
 
       <section id="popular">
-        <div class=" container">
+        <div class=" container pt-lg-7 pt-md-0 pt-sm-0">
           <div class=" row justify-content-center g-md-6 g-lg-4">
-            <div class=" text-center mb-5 mb-md-7">
+            <div class=" text-center mb-5 mb-md-7" id="popularText">
               <h4 class=" text-warning sub-title">The Best food</h4>
               <h1 class=" title">Popular Dishes</h1>
             </div>
-            <div class=" col-10 col-md-6 col-lg-3">
-              <div class=" dish-card border-0 shadow rounded-3 pb-2">
-                <img src="./sushi/img/popular-onigiri.png" class=" w-100 d-block" alt="">
-                <h4 class=" card-title text-center mb-2 ">Onigiri</h4>
-                <p class=" text-center">Japanese Dish</p>
-                <h5 class="text-warning fw-semibold text-end me-3">$10.99</h5>
+            <div class=" row justify-content-center" id="popularImage">
+              <div class=" col-10 col-md-6 col-lg-3">
+                <div class=" dish-card border-0 shadow rounded-3 pb-2">
+                  <img src="./sushi/img/popular-onigiri.png" class=" w-100 d-block" alt="">
+                  <h4 class=" card-title text-center mb-2 ">Onigiri</h4>
+                  <p class=" text-center">Japanese Dish</p>
+                  <h5 class="text-warning fw-semibold text-end me-3">$10.99</h5>
+                </div>
               </div>
-            </div>
-            <div class=" col-10 col-md-6 col-lg-3">
-              <div class=" dish-card border-0 shadow rounded-3 pb-2">
-                <img src="./sushi/img/popular-spring-rols.png" class=" w-100 d-block" alt="">
-                <h4 class=" card-title text-center mb-2">Spring Rolls</h4>
-                <p class=" text-center">Japanese Dish</p>
-                <h5 class=" text-end me-3 text-warning fw-semibold">$15.99 </h5>
+              <div class=" col-10 col-md-6 col-lg-3">
+                <div class=" dish-card border-0 shadow rounded-3 pb-2">
+                  <img src="./sushi/img/popular-spring-rols.png" class=" w-100 d-block" alt="">
+                  <h4 class=" card-title text-center mb-2">Spring Rolls</h4>
+                  <p class=" text-center">Japanese Dish</p>
+                  <h5 class=" text-end me-3 text-warning fw-semibold">$15.99 </h5>
+                </div>
               </div>
-            </div>
-            <div class=" col-10 col-md-6 col-lg-3">
-              <div class=" dish-card border-0 shadow rounded-3 pb-2">
-                <img src="./sushi/img/popular-sushi-rolls.png" class=" w-100 d-block" alt="">
-                <h4 class=" card-title text-center mb-2">Sushi Rolls</h4>
-                <p class=" text-center">Japanese Dish</p>
-                <h5 class=" text-end me-3 text-warning fw-semibold">$19.99</h5>
+              <div class=" col-10 col-md-6 col-lg-3">
+                <div class=" dish-card border-0 shadow rounded-3 pb-2">
+                  <img src="./sushi/img/popular-sushi-rolls.png" class=" w-100 d-block" alt="">
+                  <h4 class=" card-title text-center mb-2">Sushi Rolls</h4>
+                  <p class=" text-center">Japanese Dish</p>
+                  <h5 class=" text-end me-3 text-warning fw-semibold">$19.99</h5>
+                </div>
               </div>
             </div>
           </div>
@@ -148,7 +150,7 @@
         <!-- first row -->
           <div class=" row justify-content-center align-items-center mb-7">
             <div class=" col-10 col-md-6 col-lg-5">
-              <div class=" text-center text-md-start">
+              <div class=" text-center text-md-start" id="RecentlyText">
                 <h2 class=" mb-4 text-warning sub-title">Recently Added</h2>
                 <h1 class=" display-6 mb-0 title">Sushi Samurai <img src="./sushi/img/spinach-leaf.png" class=" sushi-title rotate d-none d-lg-inline" alt=""> <br> Salmón Cheese</h1>
                 <p class="mt-4">Take a look at what's new. And do not deprive yourself of a good meal, enjoy and be happy.</p>
@@ -156,7 +158,7 @@
               </div>
             </div>
             <div class=" col-10 col-md-6 col-lg-7 ">
-              <div>
+              <div id="RecentlyImage">
                 <img src="./sushi/img/recently-salmon-sushi.png" class=" w-100 d-block recently-img" alt="">
               </div>
             </div>
@@ -265,5 +267,6 @@
       </div>
     </main>
     
+    <script src="./js/sushi.js"></script>
   </body>
 </html>
